fix(dev-bar-menu): fix color dark mode

--- a/src/app/components/categories/categories.component.scss
+++ b/src/app/components/categories/categories.component.scss
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: $white;
   font-weight: 700;
   line-height: 26.3px;
   cursor: pointer;
@@ -58,7 +58,7 @@
     font-size: 21px;
     line-height: 24px;
     text-align: right;
-    color: #f44242;
+    color: var(--color-red);
   }
 
   .price-currency {
@@ -69,7 +69,7 @@
     font-size: 18px;
     line-height: 21px;
     text-align: right;
-    color: #666666;
+    color: $gray-dark;
   }
 
 .product-first-letter {
@@ -96,7 +96,7 @@
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
-  color: #333333;
+  color: var(--text-color);
   position: absolute;
   bottom: 10px;
   word-break:break-all;
